--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -24,10 +24,8 @@
             <nav>
               <ul>
                 <li><a href="#">News Source: <span>Source Name</span></a>
-                  <ul>
-                      <li><a href="#">Source 1</a></li>
-                      <li><a href="#">Source 2</a></li>
-                      <li><a href="#">Source 3</a></li>
+                  <ul id="sourcesUl">
+
                   </ul>
                 </li>
               </ul>
