--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -22,15 +22,15 @@
           <section class="container">
             <a href="#"><h1>Feedr</h1></a>
             <nav>
-              <ul>
-                <li><a href="#">News Source: <span>Source Name</span></a>
-                  <ul>
-                      <li><a href="#">Source 1</a></li>
-                      <li><a href="#">Source 2</a></li>
-                      <li><a href="#">Source 3</a></li>
+              <!-- <ul>
+                <li><a href="#">News Source: <span>Source Name</span></a> -->
+                  <ul id="SourceSet">
+                      <li value="digg"><a href="#">DIGG</a></li>
+                      <li value="newsapi"><a href="#">NewsAPI</a></li>
+                      <li value="bbc"><a href="#">BBC</a></li>
                   </ul>
-                </li>
-              </ul>
+                <!-- </li>
+              </ul> -->
               <section id="search">
                 <input type="text" name="name" value="">
                 <a href="#"><img src="images/search.png" alt="" /></a>
@@ -106,6 +106,7 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+        <script src="js/keys.js"></script>
         <script src="js/app.js"></script>
 
     </body>
