--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -25,9 +25,9 @@
               <!-- <ul>
                 <li><a href="#">News Source: <span>Source Name</span></a> -->
                   <ul id="SourceSet">
-                      <li value="digg"><a href="#">DIGG</a></li>
-                      <li value="newsapi"><a href="#">NewsAPI</a></li>
-                      <li value="bbc"><a href="#">BBC</a></li>
+                      <li ><a href="#">DIGG</a></li>
+                      <li ><a href="#">NewsAPI</a></li>
+                      <li ><a href="#">Mashable</a></li>
                   </ul>
                 <!-- </li>
               </ul> -->
