second- 1api and popup works

--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -11,7 +11,7 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    </head>
+    </head> 
 
     <body>
         <!--[if lt IE 8]>
@@ -40,13 +40,13 @@
           </section>
         </header>
         <div id="popUp" class="hidden">
-          <a href="#" class="closePopUp">X</a>
+          <a href="#" id="newPopup" class="closePopUp">X</a>
           <div class="container">
-            <h1>Article title here</h1>
-            <p>
-              Article description/content here.
+            <h1 id="popTitle">title here</h1>
+            <p id="popDescrpt">
+            description here
             </p>
-            <a href="#" class="popUpAction" target="_blank">Read more from source</a>
+            <a href="#" id="articaleLink" class="popUpAction" target="_blank">Read more from source</a>
           </div>
         </div>
         <section id="main" class="container">
