first lod and popup lod

--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -24,7 +24,7 @@
             <nav>
               <ul>
                 <li><a href="#">News Source: <span>Source Name</span></a>
-                  <ul>
+                  <ul id="menu">
                       <li><a href="#">Source 1</a></li>
                       <li><a href="#">Source 2</a></li>
                       <li><a href="#">Source 3</a></li>
