--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -22,15 +22,15 @@
           <section class="container">
             <a href="#"><h1>Feedr</h1></a>
             <nav>
-              <!-- <ul>
-                <li><a href="#">News Source: <span>Source Name</span></a> -->
+              <ul>
+                <li><a href="#">News Source: <span>Source Name</span></a>
                   <ul id="SourceSet">
                       <li ><a href="#">DIGG</a></li>
                       <li ><a href="#">NewsAPI</a></li>
                       <li ><a href="#">Mashable</a></li>
                   </ul>
-                <!-- </li>
-              </ul> -->
+                </li>
+              </ul>
               <section id="search">
                 <input type="text" name="name" value="">
                 <a href="#"><img src="images/search.png" alt="" /></a>
