--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -50,7 +50,7 @@
           </div>
         </div>
         <section id="main" class="container">
-          <article class="article">
+         <!--  <article class="article">
             <section class="featuredImage">
               <img src="images/article_placeholder_1.jpg" alt="" />
             </section>
@@ -101,7 +101,7 @@
               526
             </section>
             <div class="clearfix"></div>
-          </article>
+          </article> -->
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
