--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -25,7 +25,7 @@
               <ul>
                 <li><a href="#">News Source: <span>Source Name</span></a>
                   <ul>
-                      <li><a href="#">Source 1</a></li>
+                      <li><a href="#">Guardian</a></li>
                       <li><a href="#">Source 2</a></li>
                       <li><a href="#">Source 3</a></li>
                   </ul>
