--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -25,9 +25,9 @@
               <ul>
                 <li><a href="#">News Source: <span>Source Name</span></a>
                   <ul>
-                      <li><a href="#">Source 1</a></li>
-                      <li><a href="#">Source 2</a></li>
-                      <li><a href="#">Source 3</a></li>
+                      <li id="CNN"><a href="#">CNN</a></li>
+                      <li id="IGN"><a href="#">IGN</a></li>
+                      <li id="BBC"><a href="#">BBC</a></li>
                   </ul>
                 </li>
               </ul>
@@ -41,7 +41,7 @@
         </header>
         <div id="popUp" class="loader hidden">
           <a href="#" class="closePopUp">X</a>
-          <div class="container">
+          <div id="cont" class="container">
             <h1>Article title here</h1>
             <p>
               Article description/content here.
@@ -106,7 +106,7 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
-        <script src="js/app.js"></script>
+        <script src="js/new.js"></script>
 
     </body>
 </html>
