--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -20,7 +20,7 @@
 
         <header>
           <section class="container">
-            <a href="#"><h1>Feedr</h1></a>
+            <a id="logo" href="#"><h1>Feedr</h1></a>
             <nav>
               <ul>
                 <li><a href="#">News Source: <span id="sourceName"></span></a>
@@ -52,6 +52,7 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+        <script src="js/keys.js"></script>
         <script src="js/app.js"></script>
 
     </body>
