--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -25,9 +25,9 @@
               <ul>
                 <li><a href="#">News Source: <span>Source Name</span></a>
                   <ul>
-                      <li><a href="#">Source 1</a></li>
-                      <li><a href="#">Source 2</a></li>
-                      <li><a href="#">Source 3</a></li>
+                      <li type="button"  id="list1"><a href="#">Digg</a></li>
+                      <li type="button" id ="list2"><a href="#">NewsAPI</a></li>
+                      <li type="button" id="list3"><a href="#">Mashable</a></li>
                   </ul>
                 </li>
               </ul>
@@ -42,20 +42,21 @@
         <div id="popUp" class="loader hidden">
           <a href="#" class="closePopUp">X</a>
           <div class="container">
-            <h1>Article title here</h1>
-            <p>
+            <h1 id='title'>Article title here</h1>
+            <p id='desc'>
               Article description/content here.
             </p>
-            <a href="#" class="popUpAction" target="_blank">Read more from source</a>
+            <a id='url' href="" class="popUpAction" target="_blank">Read more from source</a>
           </div>
         </div>
-        <section id="main" class="container">
+        <section id="main" class="container"> </section>
+<!--
           <article class="article">
             <section class="featuredImage">
               <img src="images/article_placeholder_1.jpg" alt="" />
             </section>
             <section class="articleContent">
-                <a href="#"><h3>Test article title</h3></a>
+                <a href="#"><h3 id="no">Test article title</h3></a>
                 <h6>Lifestyle</h6>
             </section>
             <section class="impressions">
@@ -103,6 +104,7 @@
             <div class="clearfix"></div>
           </article>
         </section>
+-->
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
