--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -25,9 +25,9 @@
               <ul>
                 <li><a href="#">News Source: <span>Source Name</span></a>
                   <ul>
-                      <li><a href="#">Source 1</a></li>
-                      <li><a href="#">Source 2</a></li>
-                      <li><a href="#">Source 3</a></li>
+                      <li id = "News"><a href="#">NewsApi</a></li>
+                      <li id = "Gardian"><a href="#">Gardian</a></li>
+                      <li id = "digg"><a href="#">reddit</a></li>
                   </ul>
                 </li>
               </ul>
@@ -36,65 +36,66 @@
                 <a href="#"><img src="images/search.png" alt="" /></a>
               </section>
             </nav>
-            <div class="clearfix"></div>
+            <div id = "clickArticle" class="clearfix"></div>
           </section>
         </header>
         <div id="popUp" class="loader hidden">
-          <a href="#" class="closePopUp">X</a>
-          <div class="container">
-            <h1>Article title here</h1>
-            <p>
-              Article description/content here.
+          <a  id = "articleid" href="#" class="closePopUp">X</a>
+          <div   class="container">
+            <h1 id = "poptilte"></h1>
+            <p id = "popdesc">
+              
             </p>
-            <a href="#" class="popUpAction" target="_blank">Read more from source</a>
+            <a href="#" id = "popurl" class="popUpAction" target="_blank">Read more from source</a>
           </div>
         </div>
+        <div  id  = "rmovet" >
         <section id="main" class="container">
           <article class="article">
             <section class="featuredImage">
               <img src="images/article_placeholder_1.jpg" alt="" />
             </section>
             <section class="articleContent">
-                <a href="#"><h3>Test article title</h3></a>
+                <a id = "articleid" href="#"><h3>Test article title</h3></a>
                 <h6>Lifestyle</h6>
             </section>
             <section class="impressions">
               526
             </section>
-            <div class="clearfix"></div>
+            <div  id = "clickArticle" class="clearfix"></div>
           </article>
           <article class="article">
             <section class="featuredImage">
               <img src="images/article_placeholder_2.jpg" alt="" />
             </section>
             <section class="articleContent">
-                <a href="#"><h3>Test article title</h3></a>
+                <a id = "articleid" href="#"><h3>Test article title</h3></a>
                 <h6>Lifestyle</h6>
             </section>
             <section class="impressions">
               526
             </section>
-            <div class="clearfix"></div>
+            <div id = "clickArticle" class="clearfix"></div>
           </article>
           <article class="article">
             <section class="featuredImage">
               <img src="images/article_placeholder_2.jpg" alt="" />
             </section>
             <section class="articleContent">
-                <a href="#"><h3>Test article title</h3></a>
+                <a id = "articleid" href="#"><h3>Test article title</h3></a>
                 <h6>Lifestyle</h6>
             </section>
             <section class="impressions">
               526
             </section>
-            <div class="clearfix"></div>
+            <div id = "clickArticle" class="clearfix"></div>
           </article>
           <article class="article">
             <section class="featuredImage">
               <img src="images/article_placeholder_1.jpg" alt="" />
             </section>
             <section class="articleContent">
-                <a href="#"><h3>Test article title</h3></a>
+                <a id = "articleid" href="#"><h3>Test article title</h3></a>
                 <h6>Lifestyle</h6>
             </section>
             <section class="impressions">
@@ -103,7 +104,7 @@
             <div class="clearfix"></div>
           </article>
         </section>
-
+        </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/app.js"></script>
