--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -56,7 +56,7 @@
             </section>
             <section class="articleContent">
                 <a href="#"><h3>Test article title</h3></a>
-                <h6>Lifestyle</h6>
+                <h6>Lifestyle</h6>s
             </section>
             <section class="impressions">
               526
