--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -25,7 +25,7 @@
               <ul>
                 <li><a href="#">News Source: <span>Source Name</span></a>
                   <ul>
-                      <li><a href="#">Source 1</a></li>
+                      <li id="digg"><a href="#" >digg</a></li>
                       <li><a href="#">Source 2</a></li>
                       <li><a href="#">Source 3</a></li>
                   </ul>
@@ -33,13 +33,13 @@
               </ul>
               <section id="search">
                 <input type="text" name="name" value="">
-                <a href="#"><img src="images/search.png" alt="" /></a>
+                <a id = "searchimg" href="#"><img src="images/search.png" alt="" /></a>
               </section>
             </nav>
             <div class="clearfix"></div>
           </section>
         </header>
-        <div id="popUp" class="loader hidden">
+<!--         <div id="popUp" class="loader hidden">
           <a href="#" class="closePopUp">X</a>
           <div class="container">
             <h1>Article title here</h1>
@@ -48,9 +48,9 @@
             </p>
             <a href="#" class="popUpAction" target="_blank">Read more from source</a>
           </div>
-        </div>
+        </div> -->
         <section id="main" class="container">
-          <article class="article">
+          <!-- <article class="article">
             <section class="featuredImage">
               <img src="images/article_placeholder_1.jpg" alt="" />
             </section>
@@ -59,7 +59,6 @@
                 <h6>Lifestyle</h6>
             </section>
             <section class="impressions">
-              526
             </section>
             <div class="clearfix"></div>
           </article>
@@ -101,7 +100,7 @@
               526
             </section>
             <div class="clearfix"></div>
-          </article>
+          </article> -->
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
