--- a/feedr-starter-code/feedr-sloution1/index.html
+++ b/feedr-starter-code/feedr-sloution1/index.html
@@ -28,10 +28,10 @@
                       <li><a href="#">Source 1</a></li>
                       <li><a href="#">Source 2</a></li>
                       <li><a href="#">Source 3</a></li>
-                  <ul id = source>
+                  <!-- <ul id = source>
                       <li><a id="source1" href="#">News API</a></li>
                       <li><a id="source2" href="#">The Guardian</a></li>
-                      <li><a id="source3" href="#">The NewYork Times</a></li>
+                      <li><a id="source3" href="#">The NewYork Times</a></li> -->
 
                   </ul>
                 </li>
