--- a/feedr-starter-code/index.html
+++ b/feedr-starter-code/index.html
@@ -25,9 +25,10 @@
               <ul>
                 <li><a href="#">News Source: <span>Source Name</span></a>
                   <ul>
-                      <li><a href="#">Source 1</a></li>
-                      <li><a href="#">Source 2</a></li>
-                      <li><a href="#">Source 3</a></li>
+                      <li type =button id=list1><a href="#">Digg </a></li>
+                      <li type =button id=list2><a href="#">reddit </a></li>
+                      <li type =button id=list3><a href="#">Mash </a></li>
+
                   </ul>
                 </li>
               </ul>
